# ment

./: .gitignore  README.md  bash_completion_for_ment  pyproject.toml
ment/: main.py
tests/: test_ment.py
tests/sample_mkd/20200219/: diary.md
tests/sample_mkd/20200220/: diary.md
tests/sample_mkd/s1/: diary.md
tests/sample_mkd/target_synthe/: synthe_tag1.md
