[tool.poetry]
name = "ment"
version = "0.2.5"
description = "python library to write daily log in markdown quickly and to synthesize daily logs based on category"
authors = ["kawagh"]
repository="https://github.com/kawagh/ment"
readme="README.md"

[tool.poetry.scripts]
m = 'ment.main:main'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
